--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .DS_store
+/dashboard/static/bandwidth.svg
+/dashboard/static/jitter.svg
+/dashboard/static/latency.svg
+/dashboard/static/packet_loss.svg
