--- a/client/config.json
+++ b/client/config.json
@@ -2,6 +2,7 @@
   "grpc_server_host": "10.42.0.1",
   "grpc_server_port": 50051,
   "iperf_server_host": "10.42.0.1",
+  "iperf_server_port": 5201,
   "ping_target": "10.42.0.1",
   "interval_seconds": 1,
   "node_id": "podOne"
